[package]
name = "rust-p2p-example"
version = "0.1.0"
edition = "2021"

[dependencies]
    libp2p = { version = "0.52", features = ["tcp", "tls", "dns", "tokio", "noise", "yamux", "websocket", "ping", "macros","kad","gossipsub","identify"] }
    futures = "0.3.21"
    tokio = { version = "1", features = ["full"] }
    tracing-subscriber = { version = "0.3", features = ["env-filter"] }
    anyhow = "1.0.40"